@@ -55,8 +55,8 @@ This package has been tested with:
              g95-0.92, g95-0.93, ifort-11.x.
 
 --Windows XP and Windows 7
-    C/C++:   VC++9.0, icc-11.1.x, icc-12.0.x;
-    Fortran: ifort-11.1.x, ifort-12.0.x. 
+    C/C++:   VC++9.0, icc-11.1.x, icc-12.0.x; icc-13.0.x; icc-14.0.x;
+    Fortran: ifort-11.1.x, ifort-12.0.x; ifort-13.0.x; ifort-14.0.x.
 
 --Mac OS X
     C/C++:   gcc-4.4.x, gcc-4.5.x, gcc-4.6.x, gcc-4.8.x, icc-11.x; 
